# Green-Vigilance-Project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: baseline.yaml  extreme_uncertainty.yaml  high_noise.yaml
docs/: cleanup_report.md  finalization_report.md  matlab_legacy_mapping.md  migration_report.md  original_project_summary.md  report_parameter_inventory.md  roadmap.md  scenario_validation.md  scientific_validation.md
matlab_legacy/: README.md  config.m  main.m  startup.m
matlab_legacy/scene/: VIS3D_SCENE_OVERVIEW.m  vis3d_scene_overview_small.m
matlab_legacy/scripts/: demo_ekf_uav.m  main_sim3d_uav.m  vis3d_static.m
matlab_legacy/src/estimators/: ekf_init.m  ekf_predict.m  ekf_update_gps.m  ekf_update_imu.m
matlab_legacy/src/utils/: logger.m
matlab_legacy/src/vis/: draw_agents_markers.m  draw_field3d.m  draw_ground_shadows.m  draw_leaf_spheres.m  draw_uav.m  draw_uav_cone.m  draw_ugv.m  generate_trees.m  update_pose.m
src/green_vigilance/: __init__.py  cli.py  compare.py  config.py
src/green_vigilance/agents/: dynamics.py  uav.py  ugv.py
src/green_vigilance/control/: obstacle_avoidance.py  waypoint.py
src/green_vigilance/environment/: disease.py  field.py  plants.py
src/green_vigilance/estimation/: ekf.py  wls.py
src/green_vigilance/mapping/: heatmap.py
src/green_vigilance/sensing/: camera.py  frustum.py
tests/: test_camera.py  test_compare.py  test_config_validation.py  test_disease.py  test_dynamics.py  test_ekf.py  test_heatmap.py  test_scene3d.py  test_summary.py  test_wls.py
(+18 files in other folders)
