[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "green-vigilance"
version = "0.1.0"
description = "Python migration of a UAV/UGV precision agriculture simulation prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
test = ["pytest>=8.0"]

[project.scripts]
green-vigilance = "green_vigilance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
